# libb-aws

./: README.md  pyproject.toml
src/aws/: __init__.py  base.py  s3.py  transfer_google.py
tests/: conftest.py  test_imports.py  test_transfer_google.py
